zapata-dx/force-app/main/default/objects/Log_Agente__c/Log_Agente__c.object-meta.xml
<CustomObject>
    <description>Trazabilidad de punta a punta. Plan seccion 10. No guarda VIN completo, AccountNumber ni segundo factor.</description>
    <label>Log de agente</label>
    <nameField>
        <displayFormat>LOG-{00000000}</displayFormat>
        <label>Numero de log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs de agente</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>