zapata-dx/force-app/main/default/objects/Log_Agente__c/fields/Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Name__c</fullName>
    <description>Accion ejecutada del catalogo P0.</description>
    <label>Accion</label>
    <length>80</length>
    <type>Text</type>
</CustomField>