zapata-dx/force-app/main/default/objects/Log_Agente__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <description>Usuario o identidad del agente que ejecuto la accion.</description>
    <label>Actor</label>
    <length>120</length>
    <type>Text</type>
</CustomField>