zapata-dx/force-app/main/default/objects/Log_Agente__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relacion auditable con la unidad.</description>
    <label>Unidad</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Logs de agente</relationshipLabel>
    <relationshipName>Logs_Agente</relationshipName>
    <type>Lookup</type>
</CustomField>