zapata-dx/force-app/main/default/objects/Log_Agente__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relacion auditable con el escalamiento.</description>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Logs de agente</relationshipLabel>
    <relationshipName>Logs_Agente</relationshipName>
    <type>Lookup</type>
</CustomField>