zapata-dx/force-app/main/default/objects/Log_Agente__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <description>Une toda la conversacion. Filtro principal de la evidencia de demo.</description>
    <externalId>true</externalId>
    <label>Correlation Id</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>