zapata-dx/force-app/main/default/objects/Log_Agente__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <description>Codigo estable. Nunca un stack trace.</description>
    <label>Codigo de error</label>
    <length>40</length>
    <type>Text</type>
</CustomField>