zapata-dx/force-app/main/default/objects/Log_Agente__c/fields/Guardrail_Triggered__c.field-meta.xml
<CustomField>
    <fullName>Guardrail_Triggered__c</fullName>
    <description>Regla que bloqueo o desvio la ejecucion.</description>
    <label>Guardrail activado</label>
    <length>80</length>
    <type>Text</type>
</CustomField>