zapata-dx/force-app/main/default/objects/Log_Agente__c/fields/Idempotency_Key__c.field-meta.xml
<CustomField>
    <fullName>Idempotency_Key__c</fullName>
    <description>Compuerta unica para que un reintento de una accion no duplique sus registros de negocio.</description>
    <externalId>true</externalId>
    <label>Idempotency Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>