zapata-dx/force-app/main/default/objects/Log_Agente__c/fields/Knowledge_Article_Version_Id__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article_Version_Id__c</fullName>
    <description>Fuente exacta citada por el agente.</description>
    <label>Id de version de articulo</label>
    <length>18</length>
    <type>Text</type>
</CustomField>