zapata-dx/force-app/main/default/objects/Log_Agente__c/fields/Odometer_Source__c.field-meta.xml
<CustomField>
    <fullName>Odometer_Source__c</fullName>
    <description>Origen del dato usado en la decision.</description>
    <label>Fuente de odometro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Declarado</fullName>
            </value>
            <value>
                <fullName>Verificado</fullName>
            </value>
            <value>
                <fullName>Seed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>