zapata-dx/force-app/main/default/objects/Log_Agente__c/fields/Odometer_Used__c.field-meta.xml
<CustomField>
    <fullName>Odometer_Used__c</fullName>
    <description>Kilometraje que sostuvo la decision.</description>
    <label>Odometro usado</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>