zapata-dx/force-app/main/default/objects/Log_Agente__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>Resultado del paso.</description>
    <label>Resultado</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUCCESS</fullName>
                <default>true</default>
                <label>SUCCESS</label>
            </value>
            <value>
                <fullName>BLOCKED</fullName>
            </value>
            <value>
                <fullName>NOT_FOUND</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>