zapata-dx/force-app/main/default/objects/Log_Agente__c/fields/Policy_Version__c.field-meta.xml
<CustomField>
    <fullName>Policy_Version__c</fullName>
    <description>Regla aplicada en la decision. Admite los IDs semanticos de Knowledge del plan (K_REPROGRAMACION_TALLER, K_COMPENSACION_ESCALAMIENTO), que pasan de 20 caracteres.</description>
    <label>Version de politica</label>
    <length>40</length>
    <type>Text</type>
</CustomField>