zapata-dx/force-app/main/default/objects/Log_Agente__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>Registro creado o modificado por la accion.</description>
    <label>Id de registro relacionado</label>
    <length>18</length>
    <type>Text</type>
</CustomField>