zapata-dx/force-app/main/default/objects/Log_Agente__c/fields/Session_Key__c.field-meta.xml
<CustomField>
    <fullName>Session_Key__c</fullName>
    <description>Referencia de sesion sin exponer PII.</description>
    <label>Session Key</label>
    <length>64</length>
    <type>Text</type>
</CustomField>