zapata-dx/force-app/main/default/objects/Log_Agente__c/fields/Subagent__c.field-meta.xml
<CustomField>
    <fullName>Subagent__c</fullName>
    <description>Dominio que atendio la peticion.</description>
    <label>Subagent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Garantia</fullName>
            </value>
            <value>
                <fullName>Diagnostico</fullName>
            </value>
            <value>
                <fullName>Agenda</fullName>
            </value>
            <value>
                <fullName>Compensacion</fullName>
            </value>
            <value>
                <fullName>Varada</fullName>
            </value>
            <value>
                <fullName>Escalamiento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>