zapata-dx/force-app/main/default/objects/Log_Agente__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Momento del evento.</description>
    <label>Momento del evento</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>