zapata-dx/force-app/main/default/objects/Log_Agente__c/fields/Unidad_Varada__c.field-meta.xml
<CustomField>
    <fullName>Unidad_Varada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relacion auditable con el reporte de unidad varada.</description>
    <label>Unidad varada</label>
    <referenceTo>Unidad_Varada__c</referenceTo>
    <relationshipLabel>Logs de agente</relationshipLabel>
    <relationshipName>Logs_Agente</relationshipName>
    <type>Lookup</type>
</CustomField>