zapata-dx/force-app/main/default/objects/Log_Agente__c/fields/Unit_Verified__c.field-meta.xml
<CustomField>
    <fullName>Unit_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gate de seguridad al momento del evento.</description>
    <label>Unidad verificada</label>
    <type>Checkbox</type>
</CustomField>