zapata-dx/force-app/main/default/objects/Log_Agente__c/fields/WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relacion auditable con la orden.</description>
    <label>Orden de servicio</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Logs de agente</relationshipLabel>
    <relationshipName>Logs_Agente</relationshipName>
    <type>Lookup</type>
</CustomField>