zapata-dx/force-app/main/default/objects/Log_Agente__c/validationRules/Error_Requiere_Codigo.validationRule-meta.xml
<ValidationRule>
    <fullName>Error_Requiere_Codigo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISPICKVAL(Outcome__c, &quot;ERROR&quot;), ISPICKVAL(Outcome__c, &quot;BLOCKED&quot;)), ISBLANK(Error_Code__c), ISBLANK(Guardrail_Triggered__c))</errorConditionFormula>
    <errorDisplayField>Error_Code__c</errorDisplayField>
    <errorMessage>Un resultado ERROR o BLOCKED debe indicar el codigo de error o el guardrail que lo provoco.</errorMessage>
</ValidationRule>