zapata-dx/force-app/main/default/objects/Log_Agente__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Correlation_Id__c</columns>
    <columns>Subagent__c</columns>
    <columns>Action_Name__c</columns>
    <columns>Outcome__c</columns>
    <columns>Timestamp__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>